--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,16 @@
   color: #61dafb;
 }
 
+li{
+justify-content: center;
+  margin-left: 85px;
+}
+ul{
+  padding: 10px;
+  text-align: center;
+
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
